name clipping in badge and greeting layering fixes
namebadge clipped on iphone 8plus and greeting padding covered links in
navbar

--- a/css/home.css
+++ b/css/home.css
@@ -117,7 +117,7 @@ a:hover{
   }
   #nametag{
     height: 15vw;
-    width: 20vw;
+    width: 20.5vw;
     font-size: 5vw;
     overflow: hidden;
   }
